// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CheckBoxInput renders a disabled input 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 fxRgDK"
>
  <div
    class="ThemeProvider__AppWrapper-sc-12xd2cf-0 lixbyN"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 jOmtjA FormField__FormFieldBox-sc-m9hood-0 jTOPYT CheckBoxInput__StyledFormField-sc-16fe619-0 gfzJyh"
      tabindex="0"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 a-DZpO FormField__FormFieldContentBox-sc-m9hood-1"
      >
        <label
          class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 jVgaRV"
          disabled=""
          label="Some input"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 krJSvo StyledCheckBox-sc-1dbk5ju-6 eJWclz"
            disabled=""
          >
            <input
              class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 iZmsJF"
              disabled=""
              tabindex="-1"
              type="checkbox"
              value="Hi people"
            />
            <div
              class="StyledBox-sc-13pk1d4-0 eOirIO StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 fUJGMU"
              disabled=""
            />
          </div>
          <span>
            Some input
          </span>
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`CheckBoxInput renders a simple input 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 fxRgDK"
>
  <div
    class="ThemeProvider__AppWrapper-sc-12xd2cf-0 lixbyN"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 jOmtjA FormField__FormFieldBox-sc-m9hood-0 jTOPYT CheckBoxInput__StyledFormField-sc-16fe619-0 gfzJyh"
      tabindex="0"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 a-DZpO FormField__FormFieldContentBox-sc-m9hood-1"
      >
        <label
          class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 eZZXhg"
          label="Some input"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 krJSvo StyledCheckBox-sc-1dbk5ju-6 eJWclz"
          >
            <input
              class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 fVXtgd"
              tabindex="-1"
              type="checkbox"
              value="Hi people"
            />
            <div
              class="StyledBox-sc-13pk1d4-0 eOirIO StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 fUJGMU"
            />
          </div>
          <span>
            Some input
          </span>
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`CheckBoxInput renders a toggle input 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 fxRgDK"
>
  <div
    class="ThemeProvider__AppWrapper-sc-12xd2cf-0 lixbyN"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 jOmtjA FormField__FormFieldBox-sc-m9hood-0 jTOPYT CheckBoxInput__StyledFormField-sc-16fe619-0 gfzJyh"
      tabindex="0"
    >
      <label
        class="StyledText-sc-1sadyjn-0 imNpig"
      >
        A checkbox
      </label>
      <span
        class="StyledText-sc-1sadyjn-0 dXxgdw"
      >
        A helpful message
      </span>
      <div
        class="StyledBox-sc-13pk1d4-0 a-DZpO FormField__FormFieldContentBox-sc-m9hood-1"
      >
        <label
          class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 eZZXhg"
          label="Hi friends"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 krJSvo StyledCheckBox-sc-1dbk5ju-6 eJWclz"
          >
            <input
              class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 fVXtgd"
              tabindex="-1"
              type="checkbox"
            />
            <span
              class="StyledCheckBox__StyledCheckBoxToggle-sc-1dbk5ju-4 dxwlAK"
            >
              <span
                class="StyledCheckBox__StyledCheckBoxKnob-sc-1dbk5ju-5 jeNvYF"
              />
            </span>
          </div>
          <span>
            Hi friends
          </span>
        </label>
      </div>
      <span
        class="StyledText-sc-1sadyjn-0 gLxcNH"
      >
        Some info
      </span>
    </div>
  </div>
</div>
`;

exports[`CheckBoxInput renders an input with a form field label 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 fxRgDK"
>
  <div
    class="ThemeProvider__AppWrapper-sc-12xd2cf-0 lixbyN"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 jOmtjA FormField__FormFieldBox-sc-m9hood-0 jTOPYT CheckBoxInput__StyledFormField-sc-16fe619-0 gfzJyh"
      tabindex="0"
    >
      <label
        class="StyledText-sc-1sadyjn-0 imNpig"
      >
        A brilliant input
      </label>
      <div
        class="StyledBox-sc-13pk1d4-0 a-DZpO FormField__FormFieldContentBox-sc-m9hood-1"
      >
        <label
          class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 eZZXhg"
          label="Some input"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 krJSvo StyledCheckBox-sc-1dbk5ju-6 eJWclz"
          >
            <input
              class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 fVXtgd"
              tabindex="-1"
              type="checkbox"
              value="Hi people"
            />
            <div
              class="StyledBox-sc-13pk1d4-0 eOirIO StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 fUJGMU"
            />
          </div>
          <span>
            Some input
          </span>
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`CheckBoxInput renders an input with a help message 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 fxRgDK"
>
  <div
    class="ThemeProvider__AppWrapper-sc-12xd2cf-0 lixbyN"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 jOmtjA FormField__FormFieldBox-sc-m9hood-0 jTOPYT CheckBoxInput__StyledFormField-sc-16fe619-0 gfzJyh"
      tabindex="0"
    >
      <span
        class="StyledText-sc-1sadyjn-0 dXxgdw"
      >
        This is a very cool input
      </span>
      <div
        class="StyledBox-sc-13pk1d4-0 a-DZpO FormField__FormFieldContentBox-sc-m9hood-1"
      >
        <label
          class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 eZZXhg"
          label="Some input"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 krJSvo StyledCheckBox-sc-1dbk5ju-6 eJWclz"
          >
            <input
              class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 fVXtgd"
              tabindex="-1"
              type="checkbox"
              value="Hi people"
            />
            <div
              class="StyledBox-sc-13pk1d4-0 eOirIO StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 fUJGMU"
            />
          </div>
          <span>
            Some input
          </span>
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`CheckBoxInput renders an input with a validation error 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 fxRgDK"
>
  <div
    class="ThemeProvider__AppWrapper-sc-12xd2cf-0 lixbyN"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 jOmtjA FormField__FormFieldBox-sc-m9hood-0 jTOPYT CheckBoxInput__StyledFormField-sc-16fe619-0 gfzJyh"
      tabindex="0"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 a-DZpO FormField__FormFieldContentBox-sc-m9hood-1"
      >
        <label
          class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 eZZXhg"
          label="Some input"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 krJSvo StyledCheckBox-sc-1dbk5ju-6 eJWclz"
          >
            <input
              class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 fVXtgd"
              tabindex="-1"
              type="checkbox"
              value="Hi people"
            />
            <div
              class="StyledBox-sc-13pk1d4-0 eOirIO StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 fUJGMU"
            />
          </div>
          <span>
            Some input
          </span>
        </label>
      </div>
      <span
        class="StyledText-sc-1sadyjn-0 dGdtNa"
      >
        You failed at this
      </span>
    </div>
  </div>
</div>
`;

exports[`CheckBoxInput renders an input with an info message 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 fxRgDK"
>
  <div
    class="ThemeProvider__AppWrapper-sc-12xd2cf-0 lixbyN"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 jOmtjA FormField__FormFieldBox-sc-m9hood-0 jTOPYT CheckBoxInput__StyledFormField-sc-16fe619-0 gfzJyh"
      tabindex="0"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 a-DZpO FormField__FormFieldContentBox-sc-m9hood-1"
      >
        <label
          class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 eZZXhg"
          label="Some input"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 krJSvo StyledCheckBox-sc-1dbk5ju-6 eJWclz"
          >
            <input
              class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 fVXtgd"
              tabindex="-1"
              type="checkbox"
              value="Hi people"
            />
            <div
              class="StyledBox-sc-13pk1d4-0 eOirIO StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 fUJGMU"
            />
          </div>
          <span>
            Some input
          </span>
        </label>
      </div>
      <span
        class="StyledText-sc-1sadyjn-0 gLxcNH"
      >
        You can set a cool value
      </span>
    </div>
  </div>
</div>
`;
